--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,12 +18,7 @@
 
             <section>
                 <h1>Form Results</h1>
-                <div id="results">
-                    <div id="irony"></div>
-                    <div id="confidence"></div>
-                    <div id="subjectivity"></div>
-                    <div id="polarity"></div>
-                </div>
+                <div id="results"></div>
             </section>
         </main>
         <script>
