--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
-        <script src="https://kit.fontawesome.com/c7626b9cd3.js" crossorigin="anonymous"></script>
+        <title>Evaluate News Article with NLP</title>
     </head>
 
     <body>
         <main>
-        <h1> Evaluate News Article with NLP </h1>
+            <h1> Evaluate News Article with NLP </h1>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="url" name="input" value="" placeholder="Article link goes here!">
@@ -22,12 +21,15 @@
             </section>
         </main>
         <script>
-            // Check that service workers are supported
+            // Checking for service workers support
             if ('serviceWorker' in navigator) {
-                // Use the window load event to keep the page load performant
                 window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js');
+                    navigator.serviceWorker.register('/service-worker.js').then(registration =>{
+                        console.log('SW registered successfuly: ', registration);
+                    });
                 });
+            }else{
+                console.log("Service Working not supported");
             }
         </script>
     </body>
