--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Evaluate News Article with NLP</title>
-    </head>
+<html lang="en">
 
-    <body>
-        <main>
-            <h1> Evaluate News Article with NLP </h1>
-            <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="url" name="input" value="" placeholder="Article link goes here!">
-                    <input class="submit" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
-                </form>
-            </section>
+<head>
+    <meta charset="utf-8">
+    <title>Evaluate News Article with NLP</title>
+</head>
 
-            <section>
-                <h1>Form Results</h1>
-                <div id="results"></div>
-            </section>
-        </main>
-        <script>
-            // Checking for service workers support
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js').then(registration =>{
-                        console.log('SW registered successfuly: ', registration);
-                    });
+<body>
+    <header>
+        <h1> Evaluate News Article with NLP </h1>
+    </header>
+    <main>
+        <form onsubmit="return Client.handleSubmit(event)">
+            <input id="Article__url" type="url" name="userInput" placeholder="Article link goes here!">
+            <input class="submit" type="submit" value="Evaluate my article!">
+        </form>
+        <h1>Evaluation Results!</h1>
+        <div id="results"></div>
+    </main>
+    <script>
+        // Checking for service workers support
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js').then(registration => {
+                    console.log('SW registered successfuly: ', registration);
                 });
-            }else{
-                console.log("Service Working not supported");
-            }
-        </script>
-    </body>
+            });
+        } else {
+            console.log("Service Working not supported");
+        }
+    </script>
+</body>
+
 </html>
